--- a/Service2/App.config
+++ b/Service2/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="Consul:Port" value="8500" />
-
+    <add key="Consul:Host" value="localhost" />
     <add key="etcd:Host" value="127.0.0.1" />
     <add key="etcd:Port" value="2379" />
     <add key="etcd:Ttl" value="5" />
